--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-<title>Internet Speed Test</title>
+<title>SpeedTest EA</title>
 <link rel="shortcut icon" href="favicon.ico">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
@@ -13,7 +13,7 @@
 <body>
 
 <div class="container">
-    <h1>Internet Speed Test</h1>
+    <h1>SpeedTest EA</h1>
 
     <!-- Start/Abort button -->
     <div id="startStopBtn" onclick="startStop()"></div>
@@ -61,8 +61,6 @@
         <!-- User IP -->
         <div id="ipArea">IP Address: <span id="ip"></span></div>
     </div>
-
-    <a href="https://github.com/librespeed/speedtest" target="_blank">Source code</a>
 </div>
 
 </body>
